Corrected classification page too high problem

--- a/mobile_console/src/main/webapp/css/gg_style.css
+++ b/mobile_console/src/main/webapp/css/gg_style.css
@@ -76,7 +76,7 @@
         border-bottom: none;
         width: 100%;
     }
-    .tab-content-noborder {
+    .noborder {
     	border: none;
     	background-color: #fff;
     }
